Fixed sizes on small screens

--- a/style/style.css
+++ b/style/style.css
@@ -18,7 +18,6 @@ p {
     font-optical-sizing: auto;
     font-weight: 450;
     font-style: normal;
-    font-variation-settings: "wdth" 100;
     color: var(--text-primary-color);
 }
 
@@ -28,6 +27,7 @@ h3,
 h4 {
     font-weight: 700;
 }
+
 
 /********************* Global *************************/
 
@@ -59,6 +59,7 @@ main {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: nowrap;
 }
 
 /***************** Sidebar column *********************/
@@ -72,6 +73,7 @@ section#sidebar {
     padding-bottom: 0.35em;
     border-radius: 1em;
     box-shadow: 0.1em 0.1em 0.2em 0.15em rgba(182, 199, 224, 0.295);
+    width: 16em;
 
     a,
     p,
@@ -91,6 +93,8 @@ section#main {
     margin-left: var(--content-section-gap);
 
     section.content-section {
+        display: flex;
+        flex-direction: column;
         padding: 0.85em;
         border-radius: 1em;
         margin-bottom: var(--content-section-gap);
@@ -98,13 +102,14 @@ section#main {
         box-shadow: 0.1em 0.1em 0.15em 0.15em rgba(226, 224, 224, 0.295);
         max-width: 50em;
 
-        h2 {
-            margin-bottom: -0.375em;
-        }
 
         div div.dates-and-location-column {
             min-width: 8.25em;
             padding-top: 0.2em;
+        }
+
+        h2 {
+            margin-bottom: -0.375em;
         }
 
         div.content-item {
